src/components/Libraries.module.css
.section {
  display: flex;
}

.libList {
  padding: 0.5rem 1rem;
  padding-right: 1.5rem;
  gap: 8px;
  display: flex;
  flex-direction: column;
  align-items: start;
  overflow: scroll;
  height: 400px;
  z-index: 999;
}

.mapContainer {
  flex: 1;
}

.libList button {
  font-size: 1rem;
  margin-bottom: 1rem;
  white-space: nowrap;
}

.reset {
  position: absolute;
  color: black;
  font-weight: var(--weight-bold);
  font-size: 1.2rem;
  top: 3%;
  right: 3%;
  z-index: 999;
}

.reset button {
  opacity: 1;
}

.libList::-webkit-scrollbar {
  width: 2px;
  height: 0px;
}

.libList::-webkit-scrollbar-track {
  background: transparent;
}

.libList::-webkit-scrollbar-thumb {
  background-color: #445d48;
  background-color: var(--background-color);
  border-radius: 10px;
}

.text {
  display: none;
}

.fail {
  font-size: var(--font-md);
  font-weight: var(--weight-semi-bold);
  position: absolute;
  opacity: 0.8;
  width: 100%;
  text-align: center;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

@media all and (min-width: 480px) and (max-width: 767px) {
}

/* 모바일 세로 (해상도 ~ 479px)*/
@media all and (max-width: 479px) {
  .section {
    flex-direction: column;
  }

  .libList {
    padding-top: 1rem;
    margin-top: 0;
    height: 12vh;
    align-items: center;
    border-radius: var(--size-border-radius);
    -webkit-box-shadow: inset 0px 0px 13px 0px rgba(0, 0, 0, 0.24);
    box-shadow: inset 0px 0px 13px 0px rgba(0, 0, 0, 0.24);
  }

  .libList::-webkit-scrollbar {
    width: 0px;
  }

  .libList button {
    font-size: 1.3rem;
    font-weight: var(--weight-semi-bold);
  }

  .reset {
    position: absolute;
    top: 2.5%;
    right: 7%;
  }

  .text {
    display: block;
    font-size: 1.5rem;
    width: 100%;
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
  @media all and (max-height: 800px) {
    .reset {
      top: 3%;
    }
  }
}

